Believe this is the responsive design i want, No more grid. Just flex sso should work on most devices

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Title</title>
     <!--Import Font Awesome  -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Import Roboto Font -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Roboto">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Roboto"> -->
 </head>
 
 <body>
